# agent-team

./: .gitignore  AGENTS.md  PROGRESS.ko.md  PROGRESS.md  README.md  pyproject.toml
.cursor/rules/: caveman.mdc
docs/: IMPLEMENTATION.md  PRD.md  RGIO.md  STATUS.ko.md  architecture.md  project-integration.md  s1-api-sketch.md  s2-api-sketch.md  s3-api-sketch.md  s4-api-sketch.md  s5-api-sketch.md  s6-api-sketch.md  s7-api-sketch.md  s8-api-sketch.md  s9-api-sketch.md  setup-windows.md
docs/agents/: constraints.md  git.md  workflow.md
docs/blueprints/: s7-tui.html  status.html
personas/: planner.yaml
src/agent_team/: __init__.py  __main__.py  _io.py  _watcher.py  bundled_paths.py  event_log.py  mailbox.py  mcp_server.py  orchestrator.py  personas.py  project_loader.py  psmux_backend.py  session.py  spawn_approval.py  tasks.py  teammate_runner.py
templates/: claude-mcp.json.example
templates/project/: TEAM.md.j2  config.yaml.j2
templates/teammate/: AGENTS.md.codex.j2
tests/: conftest.py
tests/manual/: s10-payment-api-e2e.md  s9-claude-lead.md
tests/tui/: test_orchestrator_watch.py  test_tui_pilot.py  test_watcher.py
tests/unit/: test_bundled.py  test_cli_logs.py  test_cli_mail.py  test_cli_personas_context.py  test_cli_start_attach.py  test_cli_task.py  test_event_log.py  test_init.py  test_io.py  test_mailbox.py  test_mcp_server.py  test_orchestrator.py  test_personas.py  test_placeholder.py  test_project_loader.py  test_psmux_backend.py  test_session.py  test_spawn_approval.py  test_tasks.py  test_teammate_runner.py  test_tui_context.py  (+3 more)
(+35 files in other folders)
